tests/js/error/semantics/builtin_array13.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var x = [1,2,3];


var __result1 = x.push(4,5,6);
var __expect1 = 6;

var __result2 = x.toString();
var __expect2 = "1,2,3,4,5,6";
